k3s/test-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  labels:
    version: v1
    app: test
    app.kubernetes.io/version: v1
    app.kubernetes.io/name: test
  name: test-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      version: v1
      app: test
      app.kubernetes.io/version: v1
      app.kubernetes.io/name: test
  template:
    metadata:
      labels:
        version: v1
        app: test
        app.kubernetes.io/version: v1
        app.kubernetes.io/name: test
    spec:
      containers:
        - name: container-test1
          imagePullPolicy: IfNotPresent
          image: rancher/mirrored-pause:3.6
          ports:
            - name: http-1111
              protocol: TCP
              containerPort: 1111
        - name: container-test2
          imagePullPolicy: IfNotPresent
          image: k8s.gcr.io/sig-storage/snapshot-controller:v3.0.3
          ports:
            - name: http-9411
              protocol: TCP
              containerPort: 9411
      nodeSelector:
        kubernetes.io/hostname: tx-master01
      serviceAccount: default
