k3s/juck.yaml
# scrm服务
---
apiVersion: v1
kind: Service
metadata:
  name: juck-scrm
  namespace: local
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: juck-scrm
  namespace: local
subsets:
  - addresses:
      - ip: 192.168.31.164
    ports:
      - port: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: juck-scrm-ingress
  namespace: local
  labels:
    app.kubernetes.io/version: v1
    app.kubernetes.io/name: juck-scrm
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - zc114-scrm-be-biz.dev.ihave.cool
      secretName: juck-scrm-tls
  rules:
    - host: zc114-scrm-be-biz.dev.ihave.cool
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: juck-scrm
                port:
                  number: 80
---
# gateway服务
---
apiVersion: v1
kind: Service
metadata:
  name: juck-gateway
  namespace: local
spec:
  type: ClusterIP
  ports:
    - port: 9999
      targetPort: 9999
---
apiVersion: v1
kind: Endpoints
metadata:
  name: juck-gateway
  namespace: local
subsets:
  - addresses:
      - ip: 192.168.31.164
    ports:
      - port: 9999
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: juck-gateway-ingress
  namespace: local
  labels:
    app.kubernetes.io/version: v1
    app.kubernetes.io/name: juck-gateway
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - zc114-arch-gateway.dev.ihave.cool
      secretName: juck-gateway-tls
  rules:
    - host: zc114-arch-gateway.dev.ihave.cool
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: juck-gateway
                port:
                  number: 9999
---
# auth服务
---
apiVersion: v1
kind: Service
metadata:
  name: juck-auth
  namespace: local
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: juck-auth
  namespace: local
subsets:
  - addresses:
      - ip: 192.168.31.164
    ports:
      - port: 3000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: juck-auth-ingress
  namespace: local
  labels:
    app.kubernetes.io/version: v1
    app.kubernetes.io/name: juck-auth
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - zc114-arch-auth.dev.ihave.cool
      secretName: juck-auth-tls
  rules:
    - host: zc114-arch-auth.dev.ihave.cool
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: juck-auth
                port:
                  number: 3000
---
